fix(timefield): prevent formfield ellipsis styles bleeding into timefield inputs (#1628)
* fix(timefield): prevent ellipsis bleeding into inputs

* fix(timefield): make styling for disabled placeholder consistent

--- a/projects/ng-aquila/src/formfield/formfield.scss
+++ b/projects/ng-aquila/src/formfield/formfield.scss
@@ -546,12 +546,10 @@ $margin-to-message: nx-spacer(3xs);
     background-color: v(formfield-disabled-background-color);
   }
 
-  &.has-outline {
-    input,
-    textarea {
-      @include input-placeholder {
-        color: v(formfield-input-native-placeholder-disabled-color);
-      }
+  input,
+  textarea {
+    @include input-placeholder {
+      color: v(formfield-input-native-placeholder-disabled-color);
     }
   }
 
